overflow on x fix 2

--- a/styles/main.css
+++ b/styles/main.css
@@ -187,6 +187,7 @@ header ul li a:hover {
 
 #scrollToTop {
   outline: 2px solid red;
+  display: none;
   position: fixed;
   opacity: 0;
   bottom: 40px;
