section header v2 mr 0

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1389,7 +1389,8 @@ footer {
 }
 @media (max-width: 800px) {
   .section_header_v2 {
-    margin-left: 30px;
+    margin-left: 20px;
+    margin-right: 0;
 
     h1 {
       font-size: 3em;
