--- a/styles/main.css
+++ b/styles/main.css
@@ -1593,7 +1593,8 @@ footer p a {
 
 @media (max-width: 800px) {
   .section_header_v2 {
-    margin-left: 30px;
+    margin-left: 20px;
+    margin-right: 0;
   }
   .section_header_v2 h1 {
     font-size: 3em;
