--- a/styles/main.scss
+++ b/styles/main.scss
@@ -691,14 +691,14 @@ header {
 @media (max-width: 800px) {
   .portfolio {
     .portfolio_header_options {
-      width: 80%;
+      width: 90%;
       margin: 50px auto;
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
 
       .option {
-        margin-right: 20px;
+        margin-right: 10px;
         font-size: 1em;
         margin-bottom: 5px;
       }
@@ -1409,6 +1409,11 @@ footer {
 
     h1 {
       font-size: 3em;
+    }
+
+    .section_info_v2 {
+      max-width: 350px;
+      margin-bottom: 40px;
     }
   }
 }
