--- a/styles/main.scss
+++ b/styles/main.scss
@@ -11,15 +11,16 @@
   box-sizing: border-box;
 }
 
+html,
 body {
-  * {
-    // outline: 2px solid red;
-  }
+  overflow-x: hidden;
+}
+
+body {
   background-color: $body-color;
   color: $light;
   font-family: "Poppins", sans-serif;
   font-size: 16px;
-  // overflow-x: hidden;
   line-height: 26px;
 }
 
